src/styles.css
@font-face {
    font-family: 'Iosevka';
    src: url('./fonts/IosevkaCharon-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}


@font-face {
    font-family: 'Iosevka';
    src: url('./fonts/IosevkaCharon-Bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}


:root{
    --brown: #A47251;
    --light-brown: #DD9E59;
    --beige: #F0D8A1;
    --mint: #DCF0C3;
}

body{
    font-family: 'Iosevka', monospace;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

nav{
    display: flex;
    justify-content: center;
    gap: 5%;
    padding-top: 2%;
    background-color: var(--beige);
}

button{
    font-weight: bold;
    font-size: 1.8em;
    font-family: 'Iosevka', monospace; 
    color: white;
    border: none;
    background: none;
    cursor: pointer;
    transition: background 0.3s ease;
}

button:hover{
    color: var(--light-brown);
}

.home-wrapper{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 3%;
}

.body-wrapper{
    display: flex;
    gap: 50px;
    margin-top: 3%;
}

.body-wrapper p{
    width: 30vw;
    font-size: 1.5em;
    font-weight: 200;
    margin: 0;
}

.body-wrapper img{
    max-width: 600px;
    width: 90%;
    min-width: 300px;
    border-radius: 8px;
    box-shadow: 2px 2px 5px black;
    max-width: 100%;
    height: auto;
    display: block;
}

.text-container{
    display: flex;
    flex-direction: column;
    gap: 1em;
    line-height: 1.5;
}

.text-container button{
    background-color: var(--beige);
    border: solid var(--light-brown) 1px;
    min-width: 100px;
    max-width: 200px;
    margin-top: 20px;
    padding: 10px;
    border-radius: 10px;
    align-self: flex-end;
    box-shadow: 2px 2px 5px black;
}

.menu-wrapper{
    display:flex;
    width: 95%;
    margin: 0 auto;
    flex-wrap: wrap;
    flex: 1;
    gap: 20px;
    min-width: 0;
    flex-direction: column;
    align-items: center;
    padding: 20px;
    box-sizing: border-box;
}

.menu-wrapper img{
    max-width: 300px;
    width: 100%;
    min-width: 150px;
    border-radius: 20%;
    min-width: 100px;
    height: auto;
    display: block;
    flex-shrink: 0;
}

.dish-card{
    display: flex;
    border: black solid 2px;
    width: 90%;
    max-width: 600px;
    min-width: 300px;
    padding: 20px;
    border-radius: 10px;
    font-size: 1.3em;
    box-shadow: 2px 2px 10px;
}

.price{
    text-align: right;
    font-weight: bold;
    font-size: 1.5em;
}

.about-wrapper{
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 1.5em;
}

.about-wrapper p{
    max-width: 800px;
    width: 90%;
    min-width: 300px;
    line-height: 1.5;
}


.info-wrapper{
    display:flex;
    flex-direction: column;
    align-items: stretch;
    border: solid black 2px;
    max-width: 600px;
    width: 90%;
    min-width: 200px;
    background-color: var(--mint);
    box-shadow: 2px 2px 10px black;
    margin-top: 2em;
    padding: 10px;
}

.info-row{
    display: flex;
    text-align: right;
}

.info-row p {
    margin: 0;
}


@media (max-width: 600px) {
    .body-wrapper{
        flex-direction: column;
        align-items: center;
    }

    .body-wrapper p{
        width: 90%;
        margin: 10px;
    }

    .text-container button{
        align-self: center;
        margin-bottom: 20px;
    }

    .menu-wrapper{
        align-items: center;
    }

    .dish-card {
        flex-direction: column; 
        align-items: center; 
        text-align: center;
    }

    .price {
        text-align: center;   
    }

    .about-wrapper{
        margin-bottom: 10px;
    }

    .info-row{
        flex-direction: column;
        text-align: center;
        align-items: center;
    }

    .info-row p {
        text-align: center;
    }
}

